# Tetris-Battle

./: .gitignore  LICENSE  Makefile  PROJECT_OVERVIEW.md  README.md  go.mod  go.sum  package-lock.json  rebuild_and_run.sh  server.go  server_parity_test.go  server_test.go
.agent/rules/: SYSTEM_PROMPT.md
.agent/workflows/: BUG_FIX_FLOW.md  FIX_BROKEN_BUILD.md  NEW_FEATURE_GUIDE.md  setup_ts_migration_doc.md  update_android_version.md
.github/: pull_request_template.md
.github/workflows/: auto-tag.yml  ci.yml
android-server/: CHANGELOG.md  README.md  settings.gradle
android-server/app/: build.gradle
android-server/app/src/main/: AndroidManifest.xml
client/: .gitignore  CMakeLists.txt  board.cpp  board.h  game.cpp  game.h  logic.cpp  logic.h  main.cpp  minshell.html  network_manager.h  network_protocol.h  piece.h  run_local.sh  run_web.sh
client-nuxt/: .env.example  CHANGELOG.md  README.md  env.d.ts  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
client-nuxt/app/: app.vue  firebase.ts
client-nuxt/app/components/: DuoGame.ui.test.ts  DuoGame.vue  InstallPwa.vue  LANGame.test.ts  LANGame.vue  Leaderboard.vue  MiniPiece.vue  OnlineGame.layout.test.ts  OnlineGame.ui.test.ts  OnlineGame.vue  OnlineGame.winner.test.ts  PlayerBoard.test.ts  PlayerBoard.vue  SinglePlayerGame.constants.test.ts  SinglePlayerGame.layout.test.ts  SinglePlayerGame.score.test.ts  SinglePlayerGame.vue  SoloGame.constants.test.ts  SoloGame.layout.test.ts  SoloGame.vue  VersionInfo.test.ts  VersionInfo.vue
client-nuxt/app/composables/: useTouchControls.ts  useVersionInfo.test.ts  useVersionInfo.ts
client-nuxt/app/game/: Board.test.ts  Board.ts  CascadeGravity.test.ts  CascadeGravity.ts  ControlLogic.test.ts  Disconnection.test.ts  Disconnection2.test.ts  DuoGame.test.ts  DuoGame.ts  EffectSystem.test.ts  EffectSystem.ts  Game.lockdelay.test.ts  Game.save.test.ts  Game.test.ts  Game.ts  InputHandler.sensitivity.test.ts  InputHandler.test.ts  InputHandler.ts  KeyHandling.test.ts  LineClearing.test.ts  LineClearing.ts  OnlineGame.broadcast.test.ts  OnlineGame.reset.test.ts  OnlineGame.test.ts  OnlineGame.ts  Reproduction.test.ts  SpecialGame.save.test.ts  SpecialGame.test.ts  SpecialGame.ts  Tetromino.test.ts  Tetromino.ts  ThaiInput.test.ts  shapes.ts
client-nuxt/app/services/: DuoStatsService.ts  LeaderboardService.firebase.test.ts  LeaderboardService.test.ts  LeaderboardService.ts  SocketService.ts
client-nuxt/plugins/: gitVersionPlugin.ts
client-nuxt/test/: LeaderboardService.test.ts
client-nuxt/test/mocks/: git-version.ts
client-nuxt/types/: virtual-git-version.d.ts
client-ts/: .env.example  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
client-ts/.agent/workflows/: AUTO_FIX_WITH_LUMA.md
client-ts/public/: manifest.json  sw.js
client-ts/src/: main.ts  style.css  vite-env.d.ts
client-ts/src/coop/: CoopBoard.test.ts  CoopBoard.ts  CoopGame.integration.test.ts  CoopGame.test.ts  CoopGame.ts  CoopInputHandler.test.ts  CoopInputHandler.ts  CoopLeaderboard.test.ts  CoopLeaderboard.ts  CoopLeaderboardUI.test.ts  CoopLeaderboardUI.ts  CoopLogic.test.ts  CoopSync.ts  CoopSyncInput.test.ts  CoopSyncPacket.test.ts  DeterministicPieces.test.ts  DualPiece.test.ts  DualPiece.ts  FirebaseSignaling.test.ts  FirebaseSignaling.ts  HybridSync.ts  ISyncProvider.ts  P2PConnectionUI.ts  RoomManager.test.ts  RoomManager.ts  WebRTCSync.test.ts  WebRTCSync.ts
client-ts/src/game/: Board.test.ts  Board.ts  CoopRenderer.ts  DualScore.test.ts  Game.test.ts  Game.ts  GameAutoSavePause.test.ts  GameButtonState.test.ts  GameConcurrency.test.ts  GameFeatures.test.ts  GameGravity.test.ts  GameHold.test.ts  GameLeaderboardIntegration.test.ts  GameLoadLogic.test.ts  GameMode.ts  GameNavigation.test.ts  GameOverUI.test.ts  GameSaveLoad.test.ts  GameSaveLoadModes.test.ts  GameStartVisibility.test.ts  GameUI.auth_loading.test.ts  GameUI.auth_reliability.test.ts  GameUI.test.ts  GameUI.ts  GameUILoadingState.test.ts  GameUI_Auth.test.ts  GameUI_AutoSave.test.ts  GameUI_Layout.test.ts  GameUI_Lifecycle.test.ts  GameUI_QuitHome.test.ts  GameUI_Reload.test.ts  GravityMode.test.ts  HomePage.test.ts  InputHandler.test.ts  InputHandler.ts  Layout.test.ts  Leaderboard.auth.test.ts  Leaderboard.online.test.ts  Leaderboard.test.ts  Leaderboard.ts  (+11 more)
client-ts/src/pwa/: registerSW.test.ts  registerSW.ts  sw_strategy.test.ts
client-ts/src/services/: AuthService.test.ts  AuthService.ts  AuthService_Resilience.test.ts  RealtimeService.ts
client-ts/src/utils/: Logger.ts  SeededRandom.ts
client/tests/: board_test.cpp  logic_test.cpp  network_test.cpp
cmd/mac-sim/: main.go
docs/: AI_GUIDE.md  API_DESIGN.md  ARCHITECTURE.md  BRD.md  DECISION_CONTEXT.md  SBE.md  SRS.md
docs/migration/: 01_BRD.md  02_RFC.md  03_SRS.md  04_HLD.md
scripts/: build_android_lib.sh  build_wasm.sh  bump_version.sh  dev_mac_sim.sh  install_hooks.sh  pre-commit
scripts/hooks/: post-commit  pre-commit  pre-commit-auto-fix.sh
(+8 files in other folders)
